--- a/widget/pom.xml
+++ b/widget/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>widget</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>widget</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -63,7 +63,6 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.4.199</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
